lab3/lr3service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lr3service
  labels:
    app: lab3
spec:
  selector:
    app: lab3
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: NodePort
