lab3/lr3ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lr3ingress
spec:
  tls:
  - hosts:
      - ilyalr3
    secretName: mkcert
  rules:
  - host: ilyalr3
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: lr3service
            port:
              number: 3000
